[package]
name = "ggwp"
version = "0.0.1"
authors = ["pakoito <jueces.jus@gmail.com>"]
edition = "2018"
description = "A port of GGPO (https://github.com/pond3r/ggpo) to Rust"
license-file = "LICENSE.md"
repository = "https://github.com/pakoito/ggwp"
homepage = "https://github.com/pakoito/ggwp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.5.6"
ringbuf = "0.2.2"

[lib]
name = "ggwp"
crate-type = ["dylib"]
